branches/ConvertTo2010Express/src/MoonRoad/System.h


void WINAPI BringWindowToFront(HWND window);

HWND WINAPI AllocateDefaultHWND();

HWND WINAPI AllocateHWND(LONG_PTR method);

BOOL WINAPI DeallocateHWND(HWND hwnd);

void WINAPI RestoreWindowSubclass(HWND hwnd);

BOOL WINAPI ShutdownWindows(UINT flags);

BOOL WINAPI SuspendWindows();

BOOL WINAPI HibernateWindows();

BOOL WINAPI GetWorkingArea(PRECT area);

void WINAPI UpdateWindowPosition(HWND handle, int x, int y);

void WINAPI TurnMonitorOn();

void WINAPI TurnMonitorOff();

BOOL WINAPI CursorInsideWindow(HWND hwnd);

BOOL WINAPI IsGoodWindow(HWND hwnd);

LONG_PTR WINAPI GetWindowLongPointer(
    __in HWND hWnd,
    __in int nIndex);

LONG_PTR WINAPI SetWindowLongPointer(
    __in HWND hWnd,
    __in int nIndex,
    __in LONG_PTR dwNewLong);

void WINAPI ClearUnusedMemory();

void WINAPI NotifyOfChange();

HWND WINAPI AllocateLayeredWindow(LPCWSTR className);

void WINAPI LockForegroundWindow();

void WINAPI UnlockForegroundWindow();

void WINAPI ShowDesktop();