src/MoonRoad/MoonRoad.h


HWND WINAPI AllocateLaugrisWindow();

HWND WINAPI AllocateKarnaWindow();


HWND WINAPI GetMainWindow(BYTE applicationNumber);

void WINAPI SetMainWindow(HWND window, BYTE applicationNumber);

void WINAPI ExitKrento();