branches/ConvertTo2010Express/src/MoonRoad/FileOperations.h


void WINAPI DeleteToRecycleBin(LPWSTR fileName, BOOL silent);

void WINAPI ShellCopyFile(LPWSTR oldName, LPWSTR newName);


HGLOBAL WINAPI FileReadToBuffer(LPCWSTR fileName);

void WINAPI FreeFileBuffer(HGLOBAL buffer);

DWORD WINAPI FileGetSize(LPCWSTR fileName);

BOOL WINAPI FileExtensionIs(LPCWSTR fileName, LPCWSTR ext);

void WINAPI FileWriteChar(HANDLE handle, WCHAR text);

BOOL WINAPI FileRename(LPWSTR oldName, LPWSTR newName);