src/Laugris.Sage/Internal/MoonRoad.cs


        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FileWriteChar(IntPtr handle, char text);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileRename([MarshalAs(UnmanagedType.LPWStr)] string oldName, [MarshalAs(UnmanagedType.LPWStr)] string newName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsGoodWindow(IntPtr hwnd);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ShutdownWindows(int flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SuspendWindows();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool HibernateWindows();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr AllocateDefaultHWND();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr AllocateLayeredWindow([MarshalAs(UnmanagedType.LPWStr)] string className);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr AllocateHWND(WndProcDelegate method);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DeallocateHWND(IntPtr hwnd);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr AllocateLaugrisWindow();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr AllocateKarnaWindow();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void RestoreWindowSubclass(IntPtr hwnd);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr GetAppicationIcon(IntPtr wnd);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetWorkingArea(ref RECT area);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void UpdateWindowPosition(IntPtr handle, int x, int y);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ShellCopyFile([MarshalAs(UnmanagedType.LPWStr)] string oldName, [MarshalAs(UnmanagedType.LPWStr)] string newName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void BringWindowToFront(IntPtr handle);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void LockForegroundWindow();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void UnlockForegroundWindow();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void TurnMonitorOn();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void TurnMonitorOff();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CursorInsideWindow(IntPtr hwnd);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr GetWindowLongPointer(IntPtr hWnd, WindowLong nIndex);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode)]
        public static extern IntPtr SetWindowLongPointer(IntPtr hWnd, WindowLong nIndex, WndProcDelegate value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode)]
        public static extern IntPtr SetWindowLongPointer(IntPtr hWnd, WindowLong nIndex, IntPtr dwNewLong);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetMainWindow(IntPtr window, byte applicationNumber);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr GetMainWindow(byte applicationNumber);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ClearUnusedMemory();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DeleteToRecycleBin([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.Bool)] bool silent);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void NotifyOfChange();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ShowDesktop();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MouseMove(int xDelta, int yDelta);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MouseMoveTo(int x, int y);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MouseLeftClick();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MouseRightClick();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr FileReadToBuffer([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FreeFileBuffer(IntPtr buffer);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int FileGetSize([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ExitKrento();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int EmToPixels(int em);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern SIZE GetTextSize([MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern SIZE GetTextSizeEx([MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int proposedWidth, int flags, bool margins);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawAlphaText(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int color, int width, int height, int flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawAlphaTextRect(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int color, ref RECT lpRect, int flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr CreateWindowsFont([MarshalAs(UnmanagedType.LPWStr)] string fontFamily, int size, int fontStyle, int fontQuality);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int GetParentProcessId();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern SIZE GetTextLineSize([MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextLine(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int color, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextOutline(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int foreColor, int backColor, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextGlow(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int foreColor, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextRect(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int foreColor, int backColor, ref RECT lpRect, int flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr CloneFont(IntPtr hFont);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsTrueColorMonitor();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsFullAdministrator();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileExtensionIs([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.LPWStr)] string extension);
